...
        image.heightAnchor.constraint(equalToConstant: 60).isActive = true
        return image
    }()
    
    private lazy var loginButton: UIButton = {
        let button = UIButton()
        button.accessibilityIdentifier = "Authenticate"
        button.backgroundColor = .ypWhite
        button.setTitle("Войти", for: .normal)
        button.titleLabel?.font = UIFont.boldSystemFont(ofSize: 17.0)
        button.setTitleColor(.ypBlack, for: .normal)
        button.setTitleColor(.ypGray, for: .highlighted)
        button.contentHorizontalAlignment = .center
...
