...
        mainImageView.translatesAutoresizingMaskIntoConstraints = false
        return mainImageView
    }()
    
    private lazy var likeButton = {
        let likeButton = UIButton()
        likeButton.accessibilityIdentifier = "likeButtonIdentifier"
        likeButton.translatesAutoresizingMaskIntoConstraints = false
        likeButton.addTarget(self, action: #selector(Self.likeButtonClicked), for: .touchUpInside)
        return likeButton
    }()
    
    private lazy var dateLabel = {
...
